<resources>
    <string name="app_name">MakeUpApps</string>
    <string name="cute_make">Cute Makeup</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_photo">Select photo</string>
    <string name="delete_photo">Delete photo</string>
    <string name="password_twice">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="brands">Brands</string>
    <string name="products">Products</string>
    <string name="save">Save</string>
    <string name="error_email">Check the entered email</string>
    <string name="error_pwd">Passwords do not match</string>
    <string name="nyx">Nyx</string>
    <string name="dior">Dior</string>
    <string name="pure">Pure Anada</string>
    <string name="clinique">Clinique</string>
    <string name="loreal">Loreal</string>
    <string name="coverfirl">Covergirl</string>


    <string name="error_pwd_len">password must be at least 8 characters</string>
    <string name="brand">Brand:</string>
    <string name="price">Price:</string>
    <string name="rating">Rating:</string>
    <string name="loading"> Loading…</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
</resources>